* Changed groupId of the PowerMock JUnit Rule project to org.powermock.modules.
* Included PowerMock rule in the released artifacts
* verifyNew with arguments no longer throws NullPointerException when missing expectation in the Mockito extension API.
* EasyMock API extension now supports mock creation of classes whose hashCode implementation depends on constructor initialization.

Change log 1.3.7 (2010-03-22)
-----------------------------
* Added support for JUnit 4.8.1 (issue 226)
* Added support for Mockito 1.8.4
* Fixed so that a "mock name" is set in the Mockito extension API. Fixes NullPointerException when e.g. toString is invoked on a mock. (issue 239)
* Changed method signature on "mockStatic" to return void in the Mockito extension API.
* Fixed the "Internal error: Run delegates were 0" bug when using a test class hierarchy and the PowerMock JUnit runner when no tests are defined in a parent test class (issue 241).
* Added support for deep cloning objects containing self references using the DeepCloner.
* New experimental approach for bootstrapping PowerMock is supported using a JUnit rule called PowerMockRule (available in JUnit 4.7+). This allows you to use other JUnit runners than the PowerMock one (PowerMockRunner) while still benefiting from PowerMock's functionality.
* Added support for suppressing all constructors in a class using suppress(constructorsDeclaredIn(X.class)).
* Added support for suppressing all constructors and methods in a class suppress(everythingDeclaredIn(X.class)).

Change log 1.3.6 (2010-03-10)
-----------------------------
* Added testng to full release project.
* Fixed so that classloader executor supports runnable's.
* DeepCloner now supports reference cloning.
* DeepCloner now supports cloning enum constants.
* DeepCloner now supports cloning standard java types (using simple serialization).
* DeepCloner now supports cloning fields in a hierarchy.
* DeepCloner now supports cloning class fields.